# dlt-getting-started

./: main.py  memo.md  pyproject.toml
file-system/: filesystem_pipeline.py  main.py  pyproject.toml
file-system/.dlt/: config.toml
rest-api/: main.py  pyproject.toml  rest_api_pipeline.py
rest-api/.dlt/: config.toml
sql-database/: main.py  pyproject.toml  sql_database_pipeline.py
