[project]
name = "dlt-getting-started"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dlt[duckdb]>=1.11.0",
    "pymysql>=1.1.1",
    "streamlit>=1.45.1",
]

[tool.uv.workspace]
members = ["rest-api", "sql-database", "file-system"]
